[gd_scene load_steps=4 format=3 uid="uid://dch1nahe8faqq"]

[ext_resource type="Script" path="res://menus/start_menu.gd" id="1_um36k"]
[ext_resource type="Theme" uid="uid://b6dswvdhomf68" path="res://themes/space_theme.tres" id="2_4o6py"]
[ext_resource type="PackedScene" uid="uid://bxfevggvxo634" path="res://assets/background/space_background.tscn" id="3_ws5ci"]

[node name="StartMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_um36k")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -449.5
offset_top = -50.5
offset_right = 449.5
offset_bottom = 50.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 200
theme_override_constants/margin_right = 200

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme = ExtResource("2_4o6py")

[node name="StartButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_4o6py")
theme_type_variation = &"start_menu_buttons"
disabled = true
text = "Start Game"

[node name="SelectLevel" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_4o6py")
text = "Select Level"

[node name="EndGame" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_4o6py")
text = "End Game"

[node name="EndTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="StartTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="SpaceBackground" parent="." instance=ExtResource("3_ws5ci")]

[connection signal="pressed" from="MarginContainer/VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/SelectLevel" to="." method="_on_select_level_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/EndGame" to="." method="_on_end_game_pressed"]
[connection signal="timeout" from="EndTimer" to="." method="_on_end_timer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_start_timer_timeout"]
